# struct-object-9-1

./: Box.cpp  Box.h  CMakeLists.txt  GRADING_COMMENTS.md  Part1.cpp  Part2.cpp  Part3.cpp  Part4_Questions.md  README.md
.github/classroom/: autograding.json
unit_tests/: catch-main.cpp  constructor_tests.cpp  getters_setters_tests.cpp  volume_area_tests.cpp
